<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/targetgame_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/orange"
    android:gravity="center"
    tools:context="$nl.hr.impossibleapp.TargetGame" >

    <ImageView
        android:id="@+id/hearts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/descriptionHearts"
        android:src="@drawable/heart3" />

    <TextView
        android:id="@+id/scoreBox"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/placeholderScore" />

    <ImageButton
        android:id="@+id/targetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@color/orange"
        android:onClick="targetHit"
        android:src="@drawable/gametarget"
        android:contentDescription="@string/descriptionTarget" />

    <TextView
        android:id="@+id/hitBox"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/placeholderHits" />

    <TextView
        android:id="@+id/timerBox"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/placeholderTimer" />
  
</RelativeLayout>


