<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ImageView
        android:id="@+id/gunsight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/gunsight"
        android:contentDescription="@string/descriptionGunSight" />
    <ImageView
        android:id="@+id/logo0"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/descriptionLogo" />
    <ImageView
        android:id="@+id/logo1"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/descriptionLogo" />
    <ImageView
        android:id="@+id/logo2"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/descriptionLogo" />
    
	<TextView
	    android:id="@+id/timerBox"
	    style="@style/text_style"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="5dp"
	    android:text="@string/placeholderTimer" />

	<TextView
	    android:id="@+id/scoreBox"
	    style="@style/text_style"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:layout_marginBottom="5dp"
	    android:layout_marginRight="5dp"
	    android:text="@string/placeholderScore" />

	<ImageView
	    android:id="@+id/hearts"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:layout_marginBottom="5dp"
	    android:layout_marginLeft="5dp"
	    android:contentDescription="@string/descriptionHearts"
	    android:src="@drawable/heart3" />
</RelativeLayout>
