<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    tools:context="$nl.hr.impossibleapp.GyroscopeGame"
    android:id="@+id/gyrogame_view">

    <TextView
        android:id="@+id/timerBox"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/placeholderTimer" />

    <ImageView
        android:id="@+id/hearts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/descriptionHearts"
        android:src="@drawable/heart3" />

    <TextView
        android:id="@+id/scoreBox"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="5dp"
        
        android:layout_marginRight="5dp"
        android:text="@string/placeholderScore" />

</FrameLayout>


