<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="$nl.hr.impossibleapp.Activity_Hangman" >

    <TextView
        android:id="@+id/timerBox"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/placeholderTimer" />

    <Button
        android:id="@+id/bt_letter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="insertLetter"
        android:text="@string/choose_letter" />

    <TextView
        android:id="@+id/scoreBox"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_letter"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/placeholderScore" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_letter"
        android:layout_centerHorizontal="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#D3D3D3"
            android:gravity="center"
            android:text="@string/dot" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#D3D3D3"
            android:gravity="center"
            android:text="@string/dot" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#D3D3D3"
            android:gravity="center"
            android:text="@string/dot" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#D3D3D3"
            android:gravity="center"
            android:text="@string/dot" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#D3D3D3"
            android:gravity="center"
            android:text="@string/dot" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#D3D3D3"
            android:gravity="center"
            android:text="@string/dot" />
    </LinearLayout>

    <ImageView
        android:id="@+id/hearts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scoreBox"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/descriptionHearts"
        android:src="@drawable/heart3" />

    <ImageView
        android:id="@+id/iv_hangman"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/timerBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/descriptionHangman"
        android:src="@drawable/hang0" />

</RelativeLayout>