<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/highscoresRL" >

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TableLayout
            android:id="@+id/main_table"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:stretchColumns="0,1" >
        </TableLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/errMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/loading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/menuBtn"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:onClick="GotoMenu"
        android:text="@string/menu" />

    <Button
        android:id="@+id/highscoresBtn"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:onClick="GotoHighscores"
        android:text="@string/worldwide" />

</RelativeLayout>
